# ime-dictionary-creator

./: README.md  main.py  pyproject.toml
ime_dictionary_creator/: constants.py  dict.py  fileio.py  microsoft_ime.py
